# api-spec.yaml
@@ -273,7 +273,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RefEntry'
+                $ref: '#/components/schemas/RefEntryEditView'
         '400':
           $ref: '#/components/responses/400'
         '500':
@@ -295,7 +295,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/RefEntry'
+              $ref: '#/components/schemas/RefEntryEditViewSave'
       responses:
         '200':
           $ref: '#/components/responses/200'
@@ -625,9 +625,24 @@ components:
           $ref: '#/components/schemas/CustomFields'
         allow:
           $ref: '#/components/schemas/Permissions'
+    RefEntryEditView:
+      description: ''
+      type: object
+      properties:
+        ui_schema:
+          type: object
+        custom_fields:
+          $ref: '#/components/schemas/CustomFields'
       required:
-        - ref_group_code
-        - code
+        - ui_schema
+        - custom_fields
+    RefEntryEditViewSave:
+      description: ''
+      type: object
+      properties:
+        custom_fields:
+          $ref: '#/components/schemas/CustomFields'
+      required:
         - custom_fields
     RefEntryUser:
       description: ''
