# src/main/java/io/swagger/api/RefGroupApi.java
@@ -24,23 +24,22 @@ import javax.validation.Valid;
 import javax.validation.constraints.*;
 import java.util.List;
 import java.util.Map;
-
-@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2020-03-15T11:43:31.530+08:00[Asia/Singapore]")
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2020-03-23T05:23:46.663+08:00[Asia/Singapore]")
 @Api(value = "ref-group", description = "the ref-group API")
 public interface RefGroupApi {
 
-    @ApiOperation(value = "Retrieve a set of Ref Entries under a Ref Group ", nickname = "refGroupRefGroupCodeRefEntriesGet", notes = "", response = InlineResponse200.class, tags = {"Customer",})
-    @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "", response = InlineResponse200.class),
-            @ApiResponse(code = 400, message = "", response = ExtraInfo.class),
-            @ApiResponse(code = 500, message = "", response = ExtraInfo.class)})
+    @ApiOperation(value = "Retrieve a set of Ref Entries under a Ref Group ", nickname = "refGroupRefGroupCodeRefEntriesGet", notes = "", response = InlineResponse200.class, tags={ "Customer", })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "", response = InlineResponse200.class),
+        @ApiResponse(code = 400, message = "", response = ExtraInfo.class),
+        @ApiResponse(code = 500, message = "", response = ExtraInfo.class) })
     @RequestMapping(value = "/ref-group/{ref_group_code}/ref_entries/",
-            produces = {"application/json"},
-            method = RequestMethod.GET)
-    ResponseEntity<InlineResponse200> refGroupRefGroupCodeRefEntriesGet(@ApiParam(value = "", required = true) @PathVariable("ref_group_code") String refGroupCode
-            , @ApiParam(value = "") @Valid @RequestParam(value = "filter", required = false) String filter
-            , @ApiParam(value = "") @Valid @RequestParam(value = "page", required = false) Integer page
-            , @ApiParam(value = "") @Valid @RequestParam(value = "page_size", required = false) Integer pageSize
-    );
+        produces = { "application/json" }, 
+        method = RequestMethod.GET)
+    ResponseEntity<InlineResponse200> refGroupRefGroupCodeRefEntriesGet(@ApiParam(value = "",required=true) @PathVariable("ref_group_code") String refGroupCode
+,@ApiParam(value = "") @Valid @RequestParam(value = "filter", required = false) String filter
+,@ApiParam(value = "") @Valid @RequestParam(value = "page", required = false) Integer page
+,@ApiParam(value = "") @Valid @RequestParam(value = "page_size", required = false) Integer pageSize
+);
 
 }
