# src/main/java/io/swagger/api/RefGroupApiController.java
@@ -23,8 +23,7 @@ import javax.servlet.http.HttpServletRequest;
 import java.io.IOException;
 import java.util.List;
 import java.util.Map;
-
-@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2020-03-15T11:43:31.530+08:00[Asia/Singapore]")
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2020-03-23T05:23:46.663+08:00[Asia/Singapore]")
 @Controller
 public class RefGroupApiController implements RefGroupApi {
 
@@ -40,11 +39,11 @@ public class RefGroupApiController implements RefGroupApi {
         this.request = request;
     }
 
-    public ResponseEntity<InlineResponse200> refGroupRefGroupCodeRefEntriesGet(@ApiParam(value = "", required = true) @PathVariable("ref_group_code") String refGroupCode
-            , @ApiParam(value = "") @Valid @RequestParam(value = "filter", required = false) String filter
-            , @ApiParam(value = "") @Valid @RequestParam(value = "page", required = false) Integer page
-            , @ApiParam(value = "") @Valid @RequestParam(value = "page_size", required = false) Integer pageSize
-    ) {
+    public ResponseEntity<InlineResponse200> refGroupRefGroupCodeRefEntriesGet(@ApiParam(value = "",required=true) @PathVariable("ref_group_code") String refGroupCode
+,@ApiParam(value = "") @Valid @RequestParam(value = "filter", required = false) String filter
+,@ApiParam(value = "") @Valid @RequestParam(value = "page", required = false) Integer page
+,@ApiParam(value = "") @Valid @RequestParam(value = "page_size", required = false) Integer pageSize
+) {
         String accept = request.getHeader("Accept");
         if (accept != null && accept.contains("application/json")) {
             try {
